<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_PartnerWithUs_Info"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="17dp"
        android:text="Select Your Field of interest"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp" />


    <RelativeLayout
        android:id="@+id/Land_Partner_Relative"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignTop="@id/tv_PartnerWithUs_Info"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Switch
            android:id="@+id/LandPartner_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorThird"
            android:hint="@string/swtich_land_partner"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/PlantationPartner_Relative"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/Land_Partner_Relative"
        android:layout_alignTop="@id/Land_Partner_Relative"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Switch
            android:id="@+id/PlantationPartner_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorThird"
            android:hint="@string/swtich_plantation_partner"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/MaintenancePartner_Relative"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/PlantationPartner_Relative"
        android:layout_alignTop="@id/PlantationPartner_Relative"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Switch
            android:id="@+id/MaintenancePartner_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorThird"
            android:hint="@string/swtich_maintenance_partner"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/PromotionalPartner_Relative"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/MaintenancePartner_Relative"
        android:layout_alignTop="@id/MaintenancePartner_Relative"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Switch
            android:id="@+id/PromotionalPartner_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorThird"
            android:hint="@string/swtich_promotional_partner"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/SocialMediaPartner_Relative"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/PromotionalPartner_Relative"
        android:layout_alignTop="@id/PromotionalPartner_Relative"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Switch
            android:id="@+id/SocialMediaPartner_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorThird"
            android:hint="@string/swtich_SocialMedia_partner"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/EventsVolunteer_Relative"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/SocialMediaPartner_Relative"
        android:layout_alignTop="@id/SocialMediaPartner_Relative"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Switch
            android:id="@+id/EventsVolunteer_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorThird"
            android:hint="@string/swtich_EventsVolunteer"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Others_Relative"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/EventsVolunteer_Relative"
        android:layout_alignTop="@id/EventsVolunteer_Relative"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Switch
            android:id="@+id/Others_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorThird"
            android:hint="@string/swtich_Others"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <EditText
        android:id="@+id/et_Describe_Below"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_below="@id/Others_Relative"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/et_Partner_Description"
        android:inputType="textMultiLine"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_Partner_Submit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="partner_submit"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/partner_withus_submit" />

</RelativeLayout>

